Fix editor toolbar z-index passthrough

--- a/richeditor/redactor/redactor.custom.css
+++ b/richeditor/redactor/redactor.custom.css
@@ -6,3 +6,9 @@
   left: 0;
   top: 0;
 }
+
+/* Fix editor toolbar z-index passthrough  */
+main.v-main {
+  position: relative;
+  z-index: 1;
+}
